--- a/app/globals.css
+++ b/app/globals.css
@@ -80,12 +80,12 @@ a {
   z-index: 999;
 }
 
-.content {
+/* .content {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   margin-top: 60px;
-}
+} */
 
 .statsCalendarContainer {
   display: flex;
