--- a/app/components/statscard.module.css
+++ b/app/components/statscard.module.css
@@ -1,4 +1,8 @@
 .statsCard {
-  padding: 5px 15px;
-
+  padding: 5px 12px;
+  background-color: white;
+  margin-bottom: 20px;
+  margin-left: 10px;
+  margin-right: 15px;
+  border-radius: 10px;
 }
