--- a/app/components/SideBar/sidebar.module.css
+++ b/app/components/SideBar/sidebar.module.css
@@ -5,7 +5,7 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-around; */
+  justify-content: space-around;
   position: absolute;
   top: 0;
   left: 0;
@@ -21,7 +21,7 @@
 .menu li {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 30px;
   padding: 15px 10px;
   font-size: 20px;
   cursor: pointer;
