--- a/app/globals.css
+++ b/app/globals.css
@@ -1,19 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   font-family: "Inter", sans-serif;
-}
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 html,
@@ -25,35 +16,16 @@ body {
   padding: 0;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
 
 .layout {
   display: flex;
   height: 100vh;
   overflow: hidden;
+  background-color: #fef3e2;
 }
 
 .sidebar {
@@ -63,7 +35,6 @@ a {
   top: 0;
   left: 0;
   z-index: 1000;
-  background-color: #fef3e2;
 }
 
 .mainContent {
@@ -73,7 +44,6 @@ a {
   height: 100vh;
   overflow-y: auto;
   overflow-x: auto;
-  background: #fef3e2;
   margin-left: 211px;
 }
 
@@ -86,18 +56,10 @@ a {
   z-index: 999;
 }
 
-/* .content {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  margin-top: 60px;
-} */
-
 .statsCalendarContainer {
   display: flex;
-  
 }
 
-.pieContainer{
+.pieContainer {
   display: flex;
 }
