--- a/app/components/Cards/piecard.module.css
+++ b/app/components/Cards/piecard.module.css
@@ -1,10 +1,21 @@
 .pieContainer {
   background-color: white;
-  width: 256;
-  height: 330;
+  width: 256px;
+  height: 330px;
   top: 40px;
   margin-left: 15px;
   padding: 5px 0px;
-
   border-radius: 20px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.chartWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
